# localebridge

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/actions/localebridge-action/: action.yml
.github/workflows/: ci.yml
apps/extractor/: package.json  tsconfig.json  vitest.config.ts
apps/extractor/src/: cli.ts  index.ts  types.ts
apps/extractor/tests/: property.test.ts  walker.test.ts
apps/orchestrator/: Dockerfile  bench_baseline.json  pyproject.toml
apps/orchestrator/src/localebridge/: __init__.py  api.py  bench.py  cli.py  models.py  pipeline.py  store.py  tm.py  writer.py
apps/orchestrator/src/localebridge/translator/: __init__.py  _base.py  claude.py  fake.py
apps/orchestrator/src/localebridge/validators/: __init__.py  icu.py  length.py  plural.py  unicode.py
apps/orchestrator/tests/: test_api.py  test_pipeline.py  test_v1_hypothesis_icu.py  test_v1_hypothesis_unicode.py  test_v1_plural_decision_table.py  test_v2_bench_regress.py  test_v2_bench_smoke.py  test_v3_icu_messageformat.py  test_v4_review_queue.py  test_validators_icu.py  test_validators_length.py  test_validators_plural.py  test_validators_unicode.py
apps/review-ui/: index.html  package.json  tsconfig.json
apps/review-ui/src/: App.tsx  ReviewCard.tsx  api.ts  diff.ts  main.tsx  styles.css
apps/review-ui/tests/: diff.test.ts
docs/: bench.md  ci-integration.md  extractor.md  icu-messageformat.md  review-queue.md  validators.md  workflow.md
examples/react-app/: package.json
examples/react-app/src/: App.tsx
(+16 files in other folders)
