[project]
name = "localebridge"
version = "0.1.0"
description = "Python orchestrator for the LocaleBridge continuous-localization pipeline"
authors = [{ name = "Sai Asish Y" }]
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.30",
    "click>=8.1.7",
]

[project.scripts]
localebridge-run = "localebridge.cli:main"
localebridge-serve = "localebridge.api:serve"

[tool.poetry]
package-mode = true
packages = [{ include = "localebridge", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
hypothesis = "^6.112.0"
mypy = "^1.11.0"
ruff = "^0.6.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["src/localebridge"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 75
